...
    "Close" : {

    },
    "Close screenshot" : {

    },
    "Command Output" : {

    },
    "Command Runner" : {

    },
    "Command exceeds iADB's 16 KiB safety limit." : {
...
    "Connection timed out" : {

    },
    "Connections" : {

    },
    "Console" : {

    },
    "Console mode" : {

    },
    "Contains the clear command" : {
...
    "Scope" : {

    },
    "Screen" : {

    },
    "Screens" : {

    },
    "Screenshot" : {

    },
    "Screenshot Details" : {

    },
    "Screenshot actions" : {

    },
    "Screenshot copied" : {
...
    "Search apps" : {

    },
    "Security" : {

    },
    "Select" : {

    },
    "Select All" : {

    },
    "Select All User Apps" : {
...
